services/extras/identity/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: my-zitadel
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  labels:
    app.kubernetes.io/instance: my-zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/version: v4.2.0
    helm.sh/chart: zitadel-9.12.2
  name: my-zitadel
  namespace: default
spec:
  rules:
  - host: id.jobico.local
    http:
      paths:
      - backend:
          service:
            name: my-zitadel
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: my-zitadel-login
            port:
              number: 3000
        path: /ui/v2/login
        pathType: Prefix
